--- a/src/layouts/App.css
+++ b/src/layouts/App.css
@@ -65,9 +65,7 @@
 }
 
 /*.scrollToTopBtn {*/
-/*  transform: translateY(100px);*/
 /*  opacity: 0;*/
-/*  transition: all 1s ease;*/
 /*}*/
 
 /*.slideOut1000ms {*/
@@ -76,7 +74,7 @@
 /*}*/
 
 .slideOut1000ms {
-  visibility: visible;
+  /*visibility: visible;*/
   animation: slideOut 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
